workspace fixes, additional typescript scaffolding

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@webgpu/types": "^0.1.69",
     "typescript": "^5.9.2",
     "vite": "^6.0.0"
   },
