--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -3,6 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
+  "exports": {
+    "./base.json": "./base.json",
+    "./react-library.json": "./react-library.json"
+  },
+  "dependencies": {
+    "@webgpu/types": "^0.1.69"
+  },
   "publishConfig": {
     "access": "public"
   }
